blurred box fixed

--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -1,5 +1,4 @@
 .subBar {
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,7 +20,6 @@
     box-shadow: 0px 4px 4px rgba(122, 119, 255, 0.05);
     backdrop-filter: blur(17px);
     border-radius: 75px;
-    margin-top: 80px;
 }
 
 .text-title {
